--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,6 +1,11 @@
 //color
 
 $dark-grey: #333;
+$blue: #1c88bf;
+$dark-bule: #364051;
+
+//font size
+$font-size-large: 1.8rem;
 //Spacing
 $s-size: 1.2rem;
 $m-size: 1.6rem;
