--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,3 +1,6 @@
 @import './base/settings';
 @import './base/base';
 @import './components/box-layout';
+@import './components/login-button';
+@import './components/header';
+@import './components/content-container';
