--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -4,3 +4,7 @@
 @import './components/login-button';
 @import './components/header';
 @import './components/content-container';
+@import './components/page-header';
+@import './components/logout-button';
+@import './components/filters';
+@import './components/input';
