--- a/src/styles/components/_login-button.scss
+++ b/src/styles/components/_login-button.scss
@@ -6,3 +6,17 @@
     border: none;
     font-weight: 300;
 }
+
+.login-button__add {
+    max-width: 200px;
+}
+
+.button__remove {
+    background-color: #888;
+    padding: $s-size;
+    color: white;
+    font-size: $font-size-large;
+    border: none;
+    font-weight: 300;
+
+}
