--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -8,3 +8,7 @@
 @import './components/logout-button';
 @import './components/filters';
 @import './components/input';
+@import './components/form';
+@import './components/visibility';
+@import './components/list';
+@import './components/loader';
